# backend_v2/routes/user.js
@@ -27,16 +27,16 @@ router.post("/register", async (req, res) => {
 
 
         let resultAddUser;
-        if( (super_auth == undefined && type != 2)|| super_auth == superkey)
+        if ((super_auth == undefined && type != 2) || super_auth == superkey)
             resultAddUser = await sql.addUser(username, name, email, password);
-        
+
         if (resultAddUser && resultAddUser.affectedRows) {
             let user_id = resultAddUser.insertId
 
 
             if (type == 1) //Author
                 await sql.addAuthor(user_id);
-            else if(type == 2 && super_auth == superkey) //Librarian 
+            else if (type == 2 && super_auth == superkey) //Librarian 
                 await sql.addLibrarian(user_id);
 
             sql.addAuth(token = tokgen.generate(), user_id)
@@ -62,7 +62,7 @@ router.post("/register", async (req, res) => {
 })
 
 router.post("/addfriend", async (req, res) => {
-    
+
     try {
         res.type('json')
         let user_id = req.body.uid
@@ -71,10 +71,10 @@ router.post("/addfriend", async (req, res) => {
         let auth = req.headers.authorization
 
         let resultCheckAuth = await sql.checkAuthType(auth, user_id)
-        
-        if (resultCheckAuth.length){
+
+        if (resultCheckAuth.length) {
             let resultAddFriend = await sql.addFriend(user_id, friend_id);
-            if(resultAddFriend && resultAddFriend.affectedRows){
+            if (resultAddFriend && resultAddFriend.affectedRows) {
                 res.sendStatus(200);
             }
             else { // If there are duplicates
@@ -84,7 +84,39 @@ router.post("/addfriend", async (req, res) => {
         else { // If three are none uid of fid
             res.sendStatus(401);
         }
-        
+
+
+    } catch (error) {
+        res.sendStatus(500);
+        console.log(error)
+    }
+
+})
+
+router.delete("/removefriend", async (req, res) => {
+
+    try {
+        res.type('json')
+        let user_id = req.body.uid
+        let friend_id = req.body.fid
+
+        let auth = req.headers.authorization
+
+        let resultCheckAuth = await sql.checkAuthType(auth, user_id)
+
+        if (resultCheckAuth.length) {
+            let resultAddFriend = await sql.delFriend(user_id, friend_id);
+            if (resultAddFriend && resultAddFriend.affectedRows) {
+                res.sendStatus(200);
+            }
+            else { // If there are duplicates
+                res.sendStatus(401);
+            }
+        }
+        else { // If three are none uid of fid
+            res.sendStatus(401);
+        }
+
 
     } catch (error) {
         res.sendStatus(500);
@@ -94,7 +126,7 @@ router.post("/addfriend", async (req, res) => {
 })
 
 router.put("/setbio", async (req, res) => {
-    
+
     try {
         res.type('json')
         let user_id = req.body.uid
@@ -103,20 +135,20 @@ router.put("/setbio", async (req, res) => {
         let auth = req.headers.authorization
 
         let resultCheckAuth = await sql.checkAuthType(auth, user_id)
-        
-        if (resultCheckAuth.length){
+
+        if (resultCheckAuth.length) {
             let resultSetBiography = await sql.setBiography(user_id, biography);
-            if(resultSetBiography && resultSetBiography.affectedRows){
+            if (resultSetBiography && resultSetBiography.affectedRows) {
                 res.sendStatus(200);
             }
-            else { 
+            else {
                 res.sendStatus(401);
             }
         }
         else { // If three are none uid of fid
             res.sendStatus(401);
         }
-        
+
 
     } catch (error) {
         res.sendStatus(500);
@@ -127,7 +159,7 @@ router.put("/setbio", async (req, res) => {
 
 
 router.put("/setemail", async (req, res) => {
-    
+
     try {
         res.type('json')
         let user_id = req.body.uid
@@ -136,13 +168,13 @@ router.put("/setemail", async (req, res) => {
         let auth = req.headers.authorization
 
         let resultCheckAuth = await sql.checkAuthType(auth, user_id)
-        
-        if (resultCheckAuth.length){
+
+        if (resultCheckAuth.length) {
             let resultSetEmail = await sql.setEmail(user_id, email);
-            if(resultSetEmail && resultSetEmail.affectedRows){
+            if (resultSetEmail && resultSetEmail.affectedRows) {
                 res.sendStatus(200);
             }
-            else { 
+            else {
                 res.sendStatus(401);
             }
         }
@@ -156,7 +188,7 @@ router.put("/setemail", async (req, res) => {
 })
 
 router.put("/setname", async (req, res) => {
-    
+
     try {
         res.type('json')
         let user_id = req.body.uid
@@ -165,13 +197,13 @@ router.put("/setname", async (req, res) => {
         let auth = req.headers.authorization
 
         let resultCheckAuth = await sql.checkAuthType(auth, user_id)
-        
-        if (resultCheckAuth.length){
+
+        if (resultCheckAuth.length) {
             let resultSetName = await sql.setName(user_id, name);
-            if(resultSetName && resultSetName.affectedRows){
+            if (resultSetName && resultSetName.affectedRows) {
                 res.sendStatus(200);
             }
-            else { 
+            else {
                 res.sendStatus(401);
             }
         }
@@ -185,7 +217,7 @@ router.put("/setname", async (req, res) => {
 })
 
 router.put("/setpassword", async (req, res) => {
-    
+
     try {
         res.type('json')
         let user_id = req.body.uid
@@ -194,13 +226,13 @@ router.put("/setpassword", async (req, res) => {
         let auth = req.headers.authorization
 
         let resultCheckAuth = await sql.checkAuthType(auth, user_id)
-        
-        if (resultCheckAuth.length){
+
+        if (resultCheckAuth.length) {
             let resultSetPassword = await sql.setPassword(user_id, password);
-            if(resultSetPassword && resultSetPassword.affectedRows){
+            if (resultSetPassword && resultSetPassword.affectedRows) {
                 res.sendStatus(200);
             }
-            else { 
+            else {
                 res.sendStatus(401);
             }
         }
@@ -214,7 +246,7 @@ router.put("/setpassword", async (req, res) => {
 })
 
 router.put("/setusername", async (req, res) => {
-    
+
     try {
         res.type('json')
         let user_id = req.body.uid
@@ -223,13 +255,13 @@ router.put("/setusername", async (req, res) => {
         let auth = req.headers.authorization
 
         let resultCheckAuth = await sql.checkAuthType(auth, user_id)
-        
-        if (resultCheckAuth.length){
+
+        if (resultCheckAuth.length) {
             let resultSetUsername = await sql.setUsername(user_id, username);
-            if(resultSetUsername && resultSetUsername.affectedRows){
+            if (resultSetUsername && resultSetUsername.affectedRows) {
                 res.sendStatus(200);
             }
-            else { 
+            else {
                 res.sendStatus(401);
             }
         }
@@ -251,7 +283,7 @@ router.get("/getusers", async (req, res) => {
         let auth = req.headers.authorization
 
         let resultCheckAuth = await sql.checkAuth(auth)
-        
+
 
         if (resultCheckAuth.length) {
             let resultgetUsers = await sql.getNonFriends(user_id);
@@ -277,8 +309,8 @@ router.get("/getfriends", async (req, res) => {
 
         let auth = req.headers.authorization
 
-        let resultCheckAuth = await sql.checkAuth(auth)
-        
+        let resultCheckAuth = await sql.checkAuthType(auth, user_id)
+
 
         if (resultCheckAuth.length) {
             let resultGetFriends = await sql.getFriends(user_id);
@@ -294,6 +326,108 @@ router.get("/getfriends", async (req, res) => {
         console.log(error)
     }
 
+})
+
+router.get("/incomingrequests", async (req, res) => {
+
+    try {
+        res.type('json')
+        let user_id = req.query.uid
+        let auth = req.headers.authorization
+
+        let resultCheckAuth = await sql.checkAuthType(auth, user_id)
+
+
+        if (resultCheckAuth.length) {
+            let resultIncomingRequests = await sql.getIncomingRequests(user_id);
+            res.status(200);
+
+            resultIncomingRequests.forEach(item => {
+                item.accepted = 0;
+            });
+
+            console.log(resultIncomingRequests)
+            res.json(resultIncomingRequests);
+        }
+        else {
+            res.sendStatus(401);
+        }
+
+    } catch (error) {
+        res.sendStatus(500);
+        console.log(error)
+    }
+
+})
+
+router.get("/outgoingrequests", async (req, res) => {
+
+    try {
+        res.type('json')
+        let user_id = req.query.uid
+        let auth = req.headers.authorization
+
+        let resultCheckAuth = await sql.checkAuthType(auth, user_id)
+
+
+        if (resultCheckAuth.length) {
+            let resultIncomingRequests = await sql.getOutgoingRequests(user_id);
+            res.status(200);
+
+            resultIncomingRequests.forEach(item => {
+                item.accepted = 0;
+            });
+
+            console.log(resultIncomingRequests)
+            res.json(resultIncomingRequests);
+        }
+        else {
+            res.sendStatus(401);
+        }
+
+    } catch (error) {
+        res.sendStatus(500);
+        console.log(error)
+    }
+})
+
+
+router.put("/requestresponse", async (req, res) => {
+
+    try {
+        res.type('json')
+        let user_id = req.body.uid
+        let friend_id = req.body.sender_id
+        let response = req.body.response
+
+        let auth = req.headers.authorization
+
+        let resultCheckAuth = await sql.checkAuthType(auth, user_id)
+
+        if (resultCheckAuth.length) {
+            let resultSetRequest;
+            if (response) {
+
+                resultSetRequest = await sql.acceptRequest(user_id, friend_id);
+            }
+            else{
+                resultSetRequest = await sql.delFriend(user_id, friend_id);
+            }
+
+            if (resultSetRequest && resultSetRequest.affectedRows) {
+                res.sendStatus(200);
+            }
+            else {
+                res.sendStatus(401);
+            }
+        }
+        else { // If three are none uid of fid
+            res.sendStatus(401);
+        }
+    } catch (error) {
+        res.sendStatus(500);
+        console.log(error)
+    }
 })
 
 
@@ -344,7 +478,7 @@ router.get("/getuser", async (req, res) => {
     try {
         res.type('json')
         let user_id = req.query.uid
-        
+
         let auth = req.headers.authorization
 
         let resultCheckAuth = await sql.checkAuthType(auth, user_id)
@@ -370,29 +504,29 @@ router.get("/getuser", async (req, res) => {
 router.get("/test", async (req, res) => {
 
     try {
-  
+
         test = () => {
             return new Promise((resolve, reject) => {
-        
+
                 pool.query("(SELECT * from User)", (err, results) => {
                     if (err) {
-        
+
                         return reject(err);
                     }
                     return resolve(results);
                 })
             })
         }
-        let  resultTable = await test();
-        
+        let resultTable = await test();
+
         console.log(bodyParser.json()(resultTable))
-  
+
     } catch (error) {
         res.sendStatus(500);
         console.log(error)
     }
-  
-  })
-  //<<<<<<<<<<<<<<<<<<<<<<<<<<<FOR TEST PURPOSES >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+
+})
+//<<<<<<<<<<<<<<<<<<<<<<<<<<<FOR TEST PURPOSES >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
 module.exports = router;
