# backend_v2/swagger.yaml
@@ -380,6 +380,135 @@ paths:
         '401':
           description: Unauthorized - Wrong username or email.
 
+  /user/removefriend:
+    delete:
+      tags:
+        - "User"
+
+      description: Removes friend from friendlist.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                  uid:
+                    type: integer
+                    format: user_id
+                    example: 2
+                  fid:
+                    type: integer
+                    format: friend_id
+                    example: 10
+      responses:
+        '200':
+          description: OK - Removed.
+        '401':
+          description: Unauthorized - Wrong username or email.
+
+
+
+  /user/incomingrequests:
+    get:
+      tags:
+        - "User"
+
+      description: Gets incoming friend requests.
+      parameters:
+        - in: query
+          name: uid
+          schema:
+            type: integer
+          description: Id of user
+          example: 1
+      responses:
+        '200':
+          description: OK - Successfully listed.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  properties:
+                    sender_id:
+                      type: integer
+                    receiver_id:
+                      type: integer
+                    user_name:
+                      type: string
+                    name:
+                      type: string
+                    accepted:
+                      type: boolean   
+        '401':
+          description: Unauthorized - Token is expired or wrong.
+
+  /user/outgoingrequests:
+    get:
+      tags:
+        - "User"
+
+      description: Gets received friend requests.
+      parameters:
+        - in: query
+          name: uid
+          schema:
+            type: integer
+          description: Id of user
+          example: 1
+      responses:
+        '200':
+          description: OK - Successfully listed.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  properties:
+                    sender_id:
+                      type: integer
+                    receiver_id:
+                      type: integer
+                    user_name:
+                      type: string
+                    name:
+                      type: string
+                    accepted:
+                      type: boolean 
+        '401':
+          description: Unauthorized - Token is expired or wrong.
+
+
+  /user/requestresponse:
+    put:
+      tags:
+        - "User"
+      description: For accepting or declining friend requests. Response is 1(accept) or 0(decline)
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                  uid:
+                    type: integer
+                    format: user_id
+                    example: 1
+                  sender_id:
+                    type: integer
+                    format: sender_id
+                    example: 2
+                  response:
+                    type: boolean
+                    format: 1(accept) or 0(decline)
+                    example: 1
+      responses:
+        '200':
+          description: OK - Successfully updated.
+        '401':
+          description: Unauthorized - Wrong username or email.
 
   /user/setbio:
     put:
